# rust-api-template

./: Cargo.toml
agent_adapter/: Cargo.toml
agent_adapter/src/: modules.rs
agent_adapter/src/persistence/: dynamodb.rs  mod.rs  postgres.rs
agent_adapter/src/repository/: health_check.rs  mod.rs
agent_app/: Cargo.toml
agent_app/src/model/: mod.rs:Zone.Identifier
agent_app/src/usecase/: health_check.rs
agent_domain/: Cargo.toml
agent_domain/src/repository/: health_check.rs
agent_server/: Cargo.toml
agent_server/src/: lib.rs
agent_server/src/context/: error.rs  mod.rs  validate.rs
agent_server/src/module/: mod.rs
agent_server/src/route/: health_check.rs
agent_server/src/startup/: mod.rs
