[package]
name = "agent_adapter"
version.workspace = true
edition = "2021"

[dependencies]
agent_domain = { path = "../agent_domain" }

tokio = { workspace = true }
dotenv = { workspace = true }
sqlx = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
derive-new = { workspace = true }
async-trait = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
reqwest = { workspace = true }
pgvector = { workspace = true }
futures = { workspace = true }
bytes = { workspace = true }
aws-config = { workspace = true }
aws-sdk-dynamodb = { workspace = true }
aws-sdk-s3 = { workspace = true }
serde_dynamo = { workspace = true }
