[package]
name = "agent_app"
version.workspace = true
edition = "2021"

[dependencies]
agent_domain = { path = "../agent_domain" }
agent_adapter = { path = "../agent_adapter" }

anyhow = { workspace = true }
derive-new = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
itertools = { workspace = true }
ulid = { workspace = true }
futures = { workspace = true }