[package]
name = "agent_domain"
version.workspace = true
edition = "2021"

[dependencies]
async-trait = { workspace = true }
anyhow = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
