[package]
name = "agent_server"
version.workspace = true
edition = "2021"

[dependencies]
agent_adapter = { path = "../agent_adapter" }
agent_app = { path = "../agent_app" }

tokio = { workspace = true}
axum = { workspace = true}
mime = { workspace = true}
tower = { workspace = true}
tower-http = { workspace = true}
tracing = { workspace = true}
tracing-subscriber = { workspace = true}
async-trait = { workspace = true}
serde = { workspace = true}
serde_json = { workspace = true}
dotenv = { workspace = true}
thiserror = { workspace = true}
anyhow = { workspace = true}
validator = { workspace = true}
ulid = { workspace = true}
futures = { workspace = true}
async-stream = { workspace = true}